--- a/templates/performance.html
+++ b/templates/performance.html
@@ -1,12 +1,11 @@
-
 {% extends "base.html" %}
 {% block content %}
 <h3>Performance</h3>
 <form class="row g-2 mb-3" method="get">
   <div class="col-md-2">
-    <select class="form-select" name="tp">
+    <select name="period" class="form-select">
       <option value="10d">Last 10 days</option>
-      <option value="21d" selected>Last 21 days</option>
+      <option value="21d">Last 21 days</option>
       <option value="35d">Last 35 days</option>
       <option value="60d">Last 60 days</option>
       <option value="3m">Last 3 months</option>
@@ -14,16 +13,46 @@
       <option value="1y">Last 1 year</option>
     </select>
   </div>
-  <div class="col-md-2"><select class="form-select" name="tc"><option value="">All Countries</option>{% for c in ctr_codes %}<option value="{{ c }}">{{ c }}</option>{% endfor %}</select></div>
+  <div class="col-md-2"><select name="country" class="form-select"><option value="">All</option>{% for c in countries %}<option value="{{ c }}">{{ c }}</option>{% endfor %}</select></div>
   <div class="col-md-2"><button class="btn btn-success w-100">Filter</button></div>
 </form>
 
 <h5>Top Delivered Products</h5>
-<table class="table table-bordered table-striped">
-<thead><tr><th>Product</th><th>Country</th><th>Orders</th><th>Pieces</th><th>Revenue</th><th>Ad Spend</th><th>Profit</th></tr></thead>
-<tbody>
-{% for r in top_report %}
-<tr><td>{{ r.product_sku }}</td><td>{{ r.country_code }}</td><td>{{ r.orders }}</td><td>{{ r.pieces }}</td><td>${{ '%.2f'|format(r.revenue_usd) }}</td><td>${{ '%.2f'|format(r.ad_usd) }}</td><td>${{ '%.2f'|format(r.profit_total_usd) }}</td></tr>
-{% endfor %}
-</tbody></table>
+<table class="table table-striped table-bordered">
+  <thead><tr><th>Product</th><th>Country</th><th>Orders</th><th>Pieces</th><th>Revenue</th><th>Ad Spend</th><th>Profit</th></tr></thead>
+  <tbody>
+  {% for r in report %}
+  <tr>
+    <td>{{ r.sku }}</td><td>{{ r.country }}</td>
+    <td>{{ r.orders }}</td><td>{{ r.pieces }}</td>
+    <td>${{ '%.2f'|format(r.revenue) }}</td>
+    <td>${{ '%.2f'|format(r.ads) }}</td>
+    <td>${{ '%.2f'|format(r.profit) }}</td>
+  </tr>
+  {% endfor %}
+  </tbody>
+</table>
+
+<h5 class="mt-4">Remittance Report</h5>
+<form method="post" action="/add_remittance" class="row g-2 mb-3">
+  <div class="col-md-2"><input class="form-control" name="product" placeholder="Product SKU"></div>
+  <div class="col-md-2"><input class="form-control" name="country" placeholder="Country"></div>
+  <div class="col-md-1"><input class="form-control" name="orders" placeholder="Orders"></div>
+  <div class="col-md-1"><input class="form-control" name="pieces" placeholder="Pieces"></div>
+  <div class="col-md-2"><input class="form-control" name="revenue" placeholder="Revenue USD"></div>
+  <div class="col-md-2"><input class="form-control" name="ads" placeholder="Ads USD"></div>
+  <div class="col-md-2"><button class="btn btn-success w-100">Add</button></div>
+</form>
+
+<table class="table table-striped table-bordered">
+  <thead><tr><th>Product</th><th>Country</th><th>Orders</th><th>Pieces</th><th>Revenue</th><th>Ads</th><th>Profit</th></tr></thead>
+  <tbody>
+  {% for r in remits %}
+  <tr>
+    <td>{{ r.product }}</td><td>{{ r.country }}</td><td>{{ r.orders }}</td><td>{{ r.pieces }}</td>
+    <td>${{ '%.2f'|format(r.revenue) }}</td><td>${{ '%.2f'|format(r.ads) }}</td><td>${{ '%.2f'|format(r.profit) }}</td>
+  </tr>
+  {% endfor %}
+  </tbody>
+</table>
 {% endblock %}
