--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,30 +1,50 @@
-
 {% extends "base.html" %}
 {% block content %}
 <h3>Settings</h3>
-<h5>Add Country</h5>
-<form method="post" action="/settings/add-country" class="row g-2 mb-3">
-  <div class="col-md-2"><input class="form-control" name="country" placeholder="Country" required></div>
-  <div class="col-md-1"><input class="form-control" name="code" placeholder="Code" required></div>
-  <div class="col-md-2"><input class="form-control" name="currency" placeholder="Currency"></div>
-  <div class="col-md-2"><input class="form-control" name="fx_to_usd" placeholder="FX rate" value="1.0"></div>
+
+<h5 class="mt-3">Manage Countries</h5>
+<form class="row g-2 mb-3" method="post" action="/add_country">
+  <div class="col-md-6"><input class="form-control" name="country" placeholder="New Country Name"></div>
   <div class="col-md-2"><button class="btn btn-success w-100">Add</button></div>
 </form>
 
-<h5>Existing Countries</h5>
 <table class="table table-bordered table-striped">
-<thead><tr><th>Country</th><th>Code</th><th>Currency</th><th>FX</th><th></th></tr></thead>
-<tbody>
-{% for c in countries %}
-<tr>
-<td>{{ c.country }}</td><td>{{ c.code }}</td><td>{{ c.currency }}</td><td>{{ c.fx_to_usd }}</td>
-<td>
-<form method="post" action="/settings/delete-country">
-<input type="hidden" name="code" value="{{ c.code }}">
-<button class="btn btn-danger btn-sm">Delete</button>
+  <thead><tr><th>Country</th><th></th></tr></thead>
+  <tbody>
+    {% for c in countries %}
+    <tr>
+      <td>{{ c }}</td>
+      <td>
+        <form method="post" action="/delete_country">
+          <input type="hidden" name="country" value="{{ c }}">
+          <button class="btn btn-danger btn-sm">Delete</button>
+        </form>
+      </td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
+
+<h5 class="mt-4">Edit Product Information</h5>
+<form method="post" action="/edit_product" class="row g-2 mb-3">
+  <div class="col-md-3"><input class="form-control" name="sku" placeholder="Product SKU"></div>
+  <div class="col-md-3"><input class="form-control" name="name" placeholder="Product Name"></div>
+  <div class="col-md-2"><input class="form-control" name="cost" placeholder="Cost CN"></div>
+  <div class="col-md-2"><input class="form-control" name="shipping" placeholder="Ship CN→KE"></div>
+  <div class="col-md-2"><button class="btn btn-warning w-100">Update</button></div>
 </form>
-</td>
-</tr>
-{% endfor %}
-</tbody></table>
+
+<h5 class="mt-4">Restore System State</h5>
+<form class="row g-2" method="post" action="/restore_backup">
+  <div class="col-md-4">
+    <select name="restore_time" class="form-select">
+      <option value="5m">5 minutes ago</option>
+      <option value="30m">30 minutes ago</option>
+      <option value="12h">12 hours ago</option>
+      <option value="24h">24 hours ago</option>
+      <option value="48h">48 hours ago</option>
+    </select>
+  </div>
+  <div class="col-md-2"><button class="btn btn-danger w-100">Restore</button></div>
+</form>
 {% endblock %}
